osd: scrubber: improved handling of new-interval events

Interval change events now trigger immediate scrub session termination and resources
release.

(based on code-review comments by @athanatos.)

Fixes: https://tracker.ceph.com/issues/48712
Signed-off-by: Ronen Friedman <rfriedma@redhat.com>